[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.2.7"
solana-sdk = "2.3.0"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }